<?xml version="1.0"?>
<package>
  <name>dynamixel_rdk_manager</name>
  <version>0.1.0</version>
  <description>

     simple dynamixel RDK manager GUI

  </description>
  <maintainer email="menggu1234@naver.com">Myeong Jin Lee</maintainer>
  <author>Myeong Jin Lee</author>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
